[FIX] Disabled scrollbar

--- a/vue-app/src/assets/css/general.css
+++ b/vue-app/src/assets/css/general.css
@@ -2,6 +2,7 @@ body{
     font-family: century-gothic, sans-serif;
     background-color: #0b1727;
     color: #c0c0c1;
+    overflow: scroll;
 }
 
 .button{
